--- a/examples/benchmark/peft/torch/requirements.txt
+++ b/examples/benchmark/peft/torch/requirements.txt
@@ -3,4 +3,5 @@ datasets==2.12.0
 peft @ git+https://github.com/huggingface/peft.git
 transformers==4.30.2
 torch==2.0.1
+sentencepiece
 # CUDA VERSION 11.7
