[llm benchmark] Add qlora  benchmark (#6376)
* Add qlora and fix length benchmark

* Remove fix length benchmark

* Update readme

* remove proxy

--- a/examples/benchmark/peft/torch/requirements.txt
+++ b/examples/benchmark/peft/torch/requirements.txt
@@ -4,4 +4,5 @@ peft @ git+https://github.com/huggingface/peft.git
 transformers==4.30.2
 torch==2.0.1
 sentencepiece
+bitsandbytes==0.39.0
 # CUDA VERSION 11.7
