update AutoEngine with low api (#6703)
* align AutoEngine to EagerEngine

* tiny fix

* fix validate

* align AutoEngine/GPTModuleAuto to EagerEngine/GPTModule

* align AutoEngine to EagerEngine and fix bugs
fix eval_losses bug
fix pp running error bug
fix valid_data_loader exits abnormally problem
add nvprof
add GPU memory log

* fix train_losses bug in func train_one_epoch and other tiny fix

* increase the eval_freq value otherwise sharding in eval mode has problem

* rm sh

* update logger

* update format

* update format

---------

Co-authored-by: Wennie396 <wn295448@buaa.edu.cn>

--- a/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/pretrain_gpt_base.yaml
+++ b/model_zoo/gpt-3/ppfleetx/configs/nlp/gpt/auto/pretrain_gpt_base.yaml
@@ -30,7 +30,7 @@ Engine:
 Model:
   module: "GPTModuleAuto"
   name: "GPT"
-  fuse_attn_qkv: False
+  fuse_attn_qkv: True
   scale_qk_by_layer_num: True
   fused_softmax_with_triangular: True
 
