[FG] Update FG for latest paddle and cuda (#6812)
* fix FG for new paddle and cuda env

--- a/paddlenlp/ops/fast_transformer/src/CMakeLists.txt
+++ b/paddlenlp/ops/fast_transformer/src/CMakeLists.txt
@@ -48,7 +48,7 @@ if(ON_INFER)
     message(FATAL_ERROR "please set DEMO with -DDEMO=demo_name")
   endif()
 
-  include_directories("${PADDLE_LIB}/")
+  include_directories("${PADDLE_LIB}/paddle/include")
   set(PADDLE_LIB_THIRD_PARTY_PATH "${PADDLE_LIB}/third_party/install/")
   include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}protobuf/include")
   include_directories("${PADDLE_LIB_THIRD_PARTY_PATH}glog/include")
@@ -89,7 +89,7 @@ if(ON_INFER)
     if(WITH_MKL)
       set(FLAG_OPENMP "-fopenmp")
     endif()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 ${FLAG_OPENMP}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAG_OPENMP}")
   endif()
 
   if (USE_TENSORRT AND WITH_GPU)
@@ -124,7 +124,7 @@ if(ON_INFER)
       if(WIN32)
         set(MKLDNN_LIB ${MKLDNN_PATH}/lib/mkldnn.lib)
       else(WIN32)
-        set(MKLDNN_LIB ${MKLDNN_PATH}/lib/libmkldnn.so.0)
+        set(MKLDNN_LIB ${MKLDNN_PATH}/lib/libdnnl.so.3)
       endif(WIN32)
     endif()
   else()
