fix empty list indices (#6927)
* fix empty list indices

* code refinement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ testpaths = [
     "tests/datasets",
     "tests/embeddings",
     "tests/experimental",
+    "tests/generation",
     "tests/layers",
     "tests/metrics",
     "tests/ops",
